fixed background issue with wlogout

--- a/wlogout/.config/wlogout/style.css
+++ b/wlogout/.config/wlogout/style.css
@@ -18,7 +18,7 @@
 }
 
 window {
-    background-image: image(url("../../wallpapers/current_wallpaper_blurred.png"));
+    background-image: image(url("../../wallpapers/current_wallpaper_blurred.jpg"));
 }
 
 button {
